# PythonLessons

./: .gitignore  Makefile  main.py  pyproject.toml  requiremets.txt  setup.cfg  utils.py
learn_python/lesson_1/: practice.py  repetition.py
learn_python/lesson_10/: examples.py  practice.py  repetition.py  theory.md
learn_python/lesson_11/: examples.py  practice.py  repetition.py  theory.md
learn_python/lesson_12/: examples.py  practice.py  repetition.py  theory.md
learn_python/lesson_13/: examples.py  practice.py  theory.md
learn_python/lesson_14/: examples.py  practice.py  repetition.py  theory.md
learn_python/lesson_15/: examples.py  practice.py  theory.md
learn_python/lesson_16/: practice.py  repetition.py  theory.md
learn_python/lesson_17/: examples.py  practice.py  theory.md
learn_python/lesson_18/: examples.py  practice.py  repetiton.py  theory.md
learn_python/lesson_19/: examples.py  repetiton.py  theory.md
learn_python/lesson_2/: examples.py  practice.py  repetition.py  theory.md
learn_python/lesson_20/: examples.py  practice.py  theory.md
learn_python/lesson_21/: examples.py  practice.py  theory.md
learn_python/lesson_22/: examples.py  practice.py  theory.md
learn_python/lesson_23/: examples.py  practice.py  repetition.py  theory.md  utils.py
learn_python/lesson_24/: examples.py  practice.py  theory.md
learn_python/lesson_25/: examples.py  practice.py  (+2 more)
lesson_1/: practice.py  theory.md
lesson_19/: examples.py  practice.py
lesson_8/: examples.py  practice.py  theory.md
tests/: test_lesson1.py
utils/: lesson_9.py
(+58 files in other folders)
