[tool.poetry]
name = "learn-python"
version = "0.1.0"
description = ""
authors = ["a.cheremushkin <a.ch3re359@yandex.ru>"]
readme = "README.md"
packages = [{include = "learn_python"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
